--- a/src/app/shop/product-item/product-item.component.html
+++ b/src/app/shop/product-item/product-item.component.html
@@ -6,6 +6,7 @@
         alt="Picture of {{product.name}}" class="h-80 w-72 object-cover rounded-t-xl"/>
       <div class="px-4 py-3 w-72">
         <p class="text-lg font-bold text-black truncate block capitalize">{{ product.name }}</p>
+        <p class="text-sm">{{ product.category.name }}</p>
         <p *ngIf="product.stockQuantity > 5" class="text-blue-500 text-sm">{{product.stockQuantity}} in stock</p>
         <p *ngIf="product.stockQuantity < 5 && product.stockQuantity > 1" class="text-red-500 font-bold text-sm">Only {{product.stockQuantity}} left!</p>
         <p *ngIf="product.stockQuantity === 1" class="text-red-500 font-bold text-sm">Last item! Be quick</p>
