--- a/src/app/shop/product-list/product-list.component.html
+++ b/src/app/shop/product-list/product-list.component.html
@@ -6,11 +6,11 @@
         Webshop!
       </h1>
 
-
       <div>
         <div class="mt-2 grid grid-cols-3">
           <h1 class="text-xl font-bold">Search: </h1>
-          <input class="appearance-none px-1 border border-b-blue-600 col-span-2" placeholder="Search..." type="text" [(ngModel)]="searchTerm" (keyup)="applySearchFilter()">
+          <input class="appearance-none px-1 border border-b-blue-600 col-span-2" placeholder="Search..." type="text"
+                 [(ngModel)]="searchTerm" (keyup)="applySearchFilter()">
         </div>
         <div class="mt-2 grid grid-cols-3">
           <h1 class="text-xl font-bold">Category: </h1>
@@ -24,22 +24,24 @@
           <h2 class="text-xl font-bold">Sort by:</h2>
           <div class="col-span-2">
             <div class="flex">
-              <select class="appearance-none px-1 border border-b-blue-600 w-full" id="sortType" name="sortType" (change)="changeSortType($event)">
-                <option *ngFor="let sortType of sortTypes" [attr.selected]="sortType.sortBy === selectedSortType ? true : null" value="{{sortType.sortBy}}">{{sortType.buttonText}}</option>
+              <select class="appearance-none px-1 border border-b-blue-600 w-full" id="sortType" name="sortType"
+                      (change)="changeSortType($event)">
+                <option *ngFor="let sortType of sortTypes"
+                        [attr.selected]="sortType.sortBy === selectedSortType ? true : null"
+                        value="{{sortType.sortBy}}">{{sortType.buttonText}}</option>
               </select>
               <button class="ml-2 p-1 text-purple-600" (click)="changeSortDirection()">
                 {{sortDirection}}
               </button>
             </div>
           </div>
-
         </div>
-
       </div>
     </div>
 
     <section id="Projects"
              class="w-fit mx-auto grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mt-10 mb-5">
+      <app-loading-spinner *ngIf="productsLoading"></app-loading-spinner>
       <app-product-item
         *ngFor="let product of filteredProducts"
         (refreshProducts)="getProducts()"
