Feat: Added loading spinners

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,8 +7,11 @@
       </div>
     </div>
 
+    <app-loading-spinner *ngIf="productsLoading"></app-loading-spinner>
+
     <section id="Projects"
              class="w-fit mx-auto grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mt-10 mb-5">
+
       <app-product-item
         *ngFor="let product of products"
         (refreshProducts)="getProducts()"
