--- a/src/app/admin/add-edit-product/add-edit-product.component.html
+++ b/src/app/admin/add-edit-product/add-edit-product.component.html
@@ -4,79 +4,84 @@
       <img class="mx-auto h-10 w-auto" src="assets/images/webshop-logo.gif" alt="Your Company">
 
     </div>
+    <app-loading-spinner class="m-1" *ngIf="categoriesLoading && toEditType == 'Product'"></app-loading-spinner>
 
-    <div class="grid md:grid-cols-2 mt-7 mx-auto">
+    <div class="grid md:grid-cols-2 mt-7 mx-auto" *ngIf="!categoriesLoading">
       <div class="space-y-7 mr-2">
-      <form [formGroup]="form">
         <h2 class="mt-7 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">
           {{isNew ? 'Add' : 'Edit'}} {{toEditType}} {{toEditType == 'Category' ? toEdit.name : ''}}</h2>
-        <div *ngIf="form.get('name')">
-          <label for="name" class="block text-sm font-medium leading-6 text-gray-900">Name</label>
-          <div class="mt-2">
-            <input id="name" name="name" type="text" required formControlName="name"
-                   class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        <form [formGroup]="form">
+          <div *ngIf="form.get('name')">
+            <label for="name" class="block text-sm font-medium leading-6 text-gray-900">Name</label>
+            <div class="mt-2">
+              <input id="name" name="name" type="text" required formControlName="name"
+                     class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
           </div>
-        </div>
 
-        <div *ngIf="form.get('shortDescription')">
-          <label for="shortDescription" class="block text-sm font-medium leading-6 text-gray-900">Short
-            Description</label>
-          <div class="mt-2">
-            <input id="shortDescription" name="shortDescription" type="text" required
-                   formControlName="shortDescription"
-                   class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+          <div *ngIf="form.get('shortDescription')">
+            <label for="shortDescription" class="block text-sm font-medium leading-6 text-gray-900">Short
+              Description</label>
+            <div class="mt-2">
+              <input id="shortDescription" name="shortDescription" type="text" required
+                     formControlName="shortDescription"
+                     class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
           </div>
-        </div>
 
-        <div *ngIf="form.get('description')">
-          <label for="description" class="block text-sm font-medium leading-6 text-gray-900">Description</label>
-          <div class="mt-2">
+          <div *ngIf="form.get('description')">
+            <label for="description" class="block text-sm font-medium leading-6 text-gray-900">Description</label>
+            <div class="mt-2">
       <textarea id="description" name="description" rows="4" required formControlName="description"
                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
-          </div>
-        </div>
-
-        <div *ngIf="form.get('price')">
-          <label for="price" class="block text-sm font-medium leading-6 text-gray-900">Price</label>
-          <div class="mt-2">
-            <input id="price" name="price" type="number" required formControlName="price"
-                   class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-          </div>
-        </div>
-
-        <div *ngIf="form.get('stockQuantity')">
-          <label for="stockQuantity" class="block text-sm font-medium leading-6 text-gray-900">Stock Quantity</label>
-          <div class="mt-2">
-            <input id="stockQuantity" name="stockQuantity" type="number" required formControlName="stockQuantity"
-                   class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-          </div>
-        </div>
-
-        <div *ngIf="form.get('pictureUrl')">
-          <label for="pictureUrl" class="block text-sm font-medium leading-6 text-gray-900">Picture URL</label>
-          <div class="mt-2">
-            <input id="pictureUrl" name="pictureUrl" type="url" required formControlName="pictureUrl"
-                   class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-          </div>
-        </div>
-      </form>
-
-          <div *ngIf="toEditType == 'Product'">
-            <div class="flex items-center justify-between">
-              <label for="category" class="block text-sm font-medium leading-6 text-gray-900">Category</label>
-            </div>
-            <div class="mt-2 rounded-md border">
-              <select class="w-full" id="category" name="category" (change)="onCategoryChange($event)">
-                <option *ngIf="isNew" value="">Select category...</option>
-                <option *ngFor="let category of categories" [value]="category.id" [selected]="category.id == selectedCategory.id">
-                  {{ category.name }}
-                </option>
-              </select>
             </div>
           </div>
 
+          <div *ngIf="form.get('price')">
+            <label for="price" class="block text-sm font-medium leading-6 text-gray-900">Price</label>
+            <div class="mt-2">
+              <input id="price" name="price" type="number" required formControlName="price"
+                     class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
+          </div>
+
+          <div *ngIf="form.get('stockQuantity')">
+            <label for="stockQuantity" class="block text-sm font-medium leading-6 text-gray-900">Stock Quantity</label>
+            <div class="mt-2">
+              <input id="stockQuantity" name="stockQuantity" type="number" required formControlName="stockQuantity"
+                     class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
+          </div>
+
+          <div *ngIf="form.get('pictureUrl')">
+            <label for="pictureUrl" class="block text-sm font-medium leading-6 text-gray-900">Picture URL</label>
+            <div class="mt-2">
+              <input id="pictureUrl" name="pictureUrl" type="url" required formControlName="pictureUrl"
+                     class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
+          </div>
+        </form>
+
+        <div *ngIf="toEditType == 'Product'">
+          <div class="flex items-center justify-between">
+            <label for="category" class="block text-sm font-medium leading-6 text-gray-900">Category</label>
+          </div>
+          <div class="mt-2 rounded-md border">
+            <select class="w-full" id="category" name="category" (change)="onCategoryChange($event)">
+              <option *ngIf="isNew" value="">Select category...</option>
+              <option *ngFor="let category of categories" [value]="category.id"
+                      [selected]="category.id == selectedCategory.id">
+                {{ category.name }}
+              </option>
+            </select>
+          </div>
+        </div>
+
+        <div class="mt-2">
+          <app-loading-spinner *ngIf="submitting"></app-loading-spinner>
+        </div>
         <div class="mt-2" *ngIf="(successMessage || error) != ''">
-          <div >
+          <div>
             <p class="text-red-400" *ngIf="error">An error occured: {{ error }}</p>
             <p class="text-green-400" *ngIf="successMessage">Succes: {{ successMessage }}</p>
           </div>
@@ -88,14 +93,17 @@
       </div>
 
 
-      <div class="ml-2">
+      <div class="ml-2 col-start-2">
         <h2 class="mt-7 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Categories</h2>
+        <app-loading-spinner *ngIf="categoriesLoading || submitting"></app-loading-spinner>
         <ul class="text-sm">
           <li class="rounded m-1 grid grid-cols-3 items-center font-medium">
             <p class="text-center">Name</p>
             <p class="text-center">Contains products</p>
           </li>
-          <li *ngFor="let category of categories"
+
+          <div *ngIf="!submitting && !categoriesLoading">
+            <li *ngFor="let category of categories"
               class="rounded m-1 border border-blue-200 grid grid-cols-3 items-center">
             <a routerLink="/editcategory/{{category.id}}"><p class="text-center">{{ category.name }}</p></a>
             <a routerLink="/editcategory/{{category.id}}"><p class="text-center">{{category.products.length}}</p></a>
@@ -105,6 +113,7 @@
               Delete
             </button>
           </li>
+      </div>
         </ul>
         <button type="submit" routerLink="/addcategory" *ngIf="toEditType == 'Product'"
                 class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
@@ -113,13 +122,18 @@
       </div>
     </div>
 
-    <div *ngIf="warning === 'deleteCategoryWarning'" class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-50">
+    <div *ngIf="warning === 'deleteCategoryWarning'"
+         class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-50">
       <div class="bg-white p-6 rounded shadow-lg max-w-md">
         <h2 class="text-xl font-bold mb-4">Are you sure you want to delete this category and its products?</h2>
         <p>(This cannot be reversed)</p>
         <div class="flex justify-end">
-          <button (click)="deleteCategoryConfirmed()" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 mr-2" id="confirmButton">Yes</button>
-          <button (click)="deleteCategoryCancelled()" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400" id="cancelButton">No</button>
+          <button (click)="deleteCategoryConfirmed()"
+                  class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 mr-2" id="confirmButton">Yes
+          </button>
+          <button (click)="deleteCategoryCancelled()"
+                  class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400" id="cancelButton">No
+          </button>
         </div>
       </div>
     </div>
