--- a/src/app/order/order-list/order-list.component.html
+++ b/src/app/order/order-list/order-list.component.html
@@ -1,8 +1,11 @@
 <section >
-  <app-order-item
-    class="p-10"
-    *ngFor="let order of orders"
-    (refreshOrders)="getOrders()"
-    [order]="order"></app-order-item>
-  <p *ngIf="orders.length < 1">No orders yet! <a routerLink="/shop">Start shopping</a></p>
+  <app-loading-spinner *ngIf="ordersLoading"></app-loading-spinner>
+  <div *ngIf="!ordersLoading">
+    <app-order-item
+      class="p-10"
+      *ngFor="let order of orders"
+      (refreshOrders)="getOrders()"
+      [order]="order"></app-order-item>
+    <p *ngIf="orders.length < 1">No orders yet! <a routerLink="/shop">Start shopping</a></p>
+  </div>
 </section>
