--- a/src/app/order/order-list/order-list.component.html
+++ b/src/app/order/order-list/order-list.component.html
@@ -1,4 +1,4 @@
-<section >
+<section  id="ordersDiv">
   <app-loading-spinner *ngIf="ordersLoading"></app-loading-spinner>
   <div *ngIf="!ordersLoading">
     <app-order-item
