--- a/src/app/shop/product-item/product-item.component.html
+++ b/src/app/shop/product-item/product-item.component.html
@@ -8,7 +8,7 @@
         <p class="text-lg font-bold text-black truncate block capitalize">{{ product.name }}</p>
         <p class="text-sm">{{ product.category.name }}</p>
         <p *ngIf="product.stockQuantity > 5" class="text-blue-500 text-sm">{{product.stockQuantity}} in stock</p>
-        <p *ngIf="product.stockQuantity < 5 && product.stockQuantity > 1" class="text-red-500 font-bold text-sm">Only {{product.stockQuantity}} left!</p>
+        <p *ngIf="product.stockQuantity <= 5 && product.stockQuantity > 1" class="text-red-500 font-bold text-sm">Only {{product.stockQuantity}} left!</p>
         <p *ngIf="product.stockQuantity === 1" class="text-red-500 font-bold text-sm">Last item! Be quick</p>
         <span class="text-gray-400 mr-3 text-xs">{{ product.shortDescription }}</span>
         <div class="flex items-center">
